<resources>
    <string name="app_name">CodeBook</string>
    <string name="for_begginners">For Beginners</string>
    <string name="compilers">Compilers</string>
    <string name="concepts">Concepts</string>
    <string name="c_programming">C</string>
    <string name="cpp_programming">C++</string>
    <string name="python">Python</string>
    <string name="java">Java</string>
    <string name="select_the_type_of_programming_language">Select the type of Programming language</string>
    <string name="concepts1">Concepts</string>
    <string name="compilers1">Compilers</string>
    <string name="computer_systems_a_computer_is_an_electronic_device_which_performs_operations_such_as_accepts_data_as_an_input_store_the_data_manipulate_or_process_the_data_and_produce_the_results_an_output_main_task_performed_by_a_computer_accept_the_data_process_or_manipulate_the_data_display_or_store_the_result_in_the_form_of_human_understanding_store_the_data_instructions_and_results">Computer systems: A Computer is an electronic device which performs operations such as accepts data As an input, store the data, manipulate or process the data and produce the results an output. Main task performed by a computer • Accept the data • Process or manipulate the data • Display or store the result in the form of human understanding • Store the data, instructions and results.</string>
    <string name="computer_software_is_a_collection_of_computer_programs_and_related_data_that_provides_the_instructions_for_a_computer_what_to_do_and_how_to_do_it_software_refers_to_one_or_more_computer_programs_and_data_held_in_the_storage_of_the_computer_for_some_purpose">Computer software is a collection of computer programs and related data that provides the instructions for a computer what to do and how to do it. Software refers to one or more computer programs and data held in the storage of the computer for some purpose</string>
    <string name="basically_computer_software_is_of_three_main_types_system_software_system_software_is_responsible_for_managing_a_variety_of_independent_hardware_components_so_that_they_can_work_together_its_purpose_is_to_unburden_the_application_software_programmer_from_the_often_complex_details_of_the_particular_computer_being_used_including_such_accessories_as_communications_devices_printers_device_readers_displays_and_keyboards_and_also_to_partition_the_computer_s_resources_such_as_memory_and_processor_time_in_a_safe_and_stable_manner_device_drivers_operating_systems_servers_utilities_window_systems_programming_software_programming_software_usually_provides_tools_to_assist_a_programmer_in_writing_computer_programs_and_software_using_different_programming_languages_in_a_more_convenient_way_the_tools_include_compilers_debuggers_interpreters_linkers_text_editors_application_software_application_software_is_developed_to_aid_in_any_task_that_benefits_from_computation_it_is_a_broad_category_and_encompasses_software_of_many_kinds_including_the_internet_browser_being_used_to_display_this_page_this_category_includes_business_software_computer_aided_design_databases_decision_making_software_educational_software_image_editing_computing_environment_computing_environment_is_a_collection_of_computers_machines_software_and_networks_that_support_the_processing_and_exchange_of_electronic_information_meant_to_support_various_types_of_computing_solutions">Basically computer software is of three main types System Software: \nSystem software is responsible for managing a variety of independent hardware components, so that they can work together. Its purpose is to unburden the application software programmer from the often complex details of the particular computer being used, including such accessories as communications devices, printers, device readers, displays and keyboards, and also to partition the computer\'s resources such as memory and processor time in a safe and stable manner. \n• Device drivers \n• Operating systems \n• Servers \n• Utilities \n• Window systems Programming Software: Programming Software usually provides tools to assist a programmer in writing computer programs, and software using different programming languages in a more convenient way. The tools include: \n• Compilers \n• Debuggers \n• Interpreters \n• Linkers \n• Text editors Application Software:\nApplication software is developed to aid in any task that benefits from computation. It is a broad category, and encompasses Software of many kinds, including the internet browser being used to display this page. This category includes: • Business software • Computer aided design • Databases • Decision making software • Educational software • Image editing Computing Environment: Computing Environment is a collection of computers / machines, software, and networks that support the processing and exchange of electronic information meant to support various types of computing solutions.</string>
    <string name="c1">C++ is a statically typed, compiled, general-purpose, case-sensitive, free-form programming language that supports procedural, object-oriented, and generic programming. C++ is regarded as a middle-level language, as it comprises a combination of both high stx level and low-level language features. C++ was developed by Bjarne Stroustrup starting in 1979 at Bell Labs in Murray Hill, New Jersey, as an enhancement to the C language and originally named C with Classes but later it was renamed C++ in 1983. C++ is a superset of C, and that virtually any legal C program is a legal C++ program. Note: A programming language is said to use static typing when type checking is performed during compile-time as opposed to run-time.</string>
    <string name="c2">C++ fully supports object-oriented programming, including the four pillars of object-oriented development: \n Encapsulation \n Data hiding \n Inheritance \n Polymorphism</string>
    <string name="c3">Standard C++ consists of three important parts:  The core language giving all the building blocks including variables, data types and literals, etc. \n The C++ Standard Library giving a rich set of functions manipulating files, strings, etc. \n The Standard Template Library (STL) giving a rich set of methods manipulating data structures, etc.</string>
    <string name="p1">Python is a widely used general-purpose, high level programming language. It was initially designed by Guido van Rossum in 1991 and developed by Python Software Foundation. It was mainly developed for emphasis on code readability, and its syntax allows programmers to express concepts in fewer lines of code. Python is a programming language that lets you work quickly and integrate systems more efficiently</string>
    <string name="p3">Beginning with Python programming: 1) Finding an Interpreter: Before we start Python programming, we need to have an interpreter to interpret and run our programs. There are certain online interpreters like https://ide.geeksforgeeks.org/, http://ideone.com/ or http://codepad.org/ that can be used to start Python without installing an interpreter. Windows: There are many interpreters available freely to run Python scripts like IDLE (Integrated Development Environment) which is installed when you install the python software from http://python.org/downloads</string>
    <string name="p2">2) Writing first program: # Script Begins \nStatement\nStatement2 \nStatement3 \n# Script Ends Differences between scripting language and programming language:</string>
</resources>